src/objects/Logger__c.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Log Level</label>
        <referenceTo>Log_Level__c</referenceTo>
        <relationshipLabel>Loggers</relationshipLabel>
        <relationshipName>Loggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LoggerName__c</fullName>
        <label>Logger Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Logger</label>
    <nameField>
        <label>Logger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>